# tn-gpt

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/: chat.py  routes.py
app/back/: generate.py  ingest.py  retrieval.py
app/front/: chat.py
app/front/templates/: index.html
